Migrated to Java 17. Upgraded some plugin versions. Added JDK 17+ profile.