@@ -58,7 +58,7 @@
         <build.number />
         <artifact.distribution.directory>${project.build.outputDirectory}</artifact.distribution.directory>
         <check.plugins.phase>package</check.plugins.phase>
-        <jdk.version>11</jdk.version>
+        <jdk.version>17</jdk.version>
         <javaee-api.version>8.0.1</javaee-api.version>
 
         <!--
@@ -77,30 +77,30 @@
         <site.staging.localDirectory>/tmp/${reactor.name}</site.staging.localDirectory>
 
         <!-- Version number properties -->
-        <maven.version>3.8.4</maven.version>
+        <maven.version>3.8.7</maven.version>
         <openjpa.version>2.4.0</openjpa.version>
         <maven.release.plugin.version>2.5.3-jahia1</maven.release.plugin.version>
-        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <osgiVersion>6.0.0</osgiVersion>
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.3.0-alpha4</logback.version>
-        <kotlin.version>1.6.20</kotlin.version>
+        <kotlin.version>1.7.22</kotlin.version>
         <clean.plugin.version>3.2.0</clean.plugin.version>
         <scm.provider.version>1.12.0</scm.provider.version>
 
         <!-- Diverse plugin versions -->
-        <maven-bundle-plugin.version>5.1.2</maven-bundle-plugin.version>
-        <maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
-        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+        <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
+        <maven-project-info-reports-plugin.version>3.4.1</maven-project-info-reports-plugin.version>
+        <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
         <dependency.plugin.version>3.1.2</dependency.plugin.version>
-        <versions-maven-plugin.version>2.10.0</versions-maven-plugin.version>
+        <versions-maven-plugin.version>2.14.2</versions-maven-plugin.version>
         <jaxb2-maven-plugin.version>2.5.0</jaxb2-maven-plugin.version>
         <depgraph-maven-plugin.version>3.3.0</depgraph-maven-plugin.version>
         <depgraph.printStyleConfiguration>false</depgraph.printStyleConfiguration>
         <jandex.plugin.version>1.2.1</jandex.plugin.version>
         <jandex.version>2.4.2.Final</jandex.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+        <maven-install-plugin.version>3.1.0</maven-install-plugin.version>
 
         <owasp.suppressionFile>codestyle/owasp-suppression.xml</owasp.suppressionFile>
         <owasp-dependency-check.version>7.0.4</owasp-dependency-check.version>
@@ -112,7 +112,7 @@
         <skip.verify.code>false</skip.verify.code>
 
         <!-- Enforcer configuration parameters -->
-        <enforcer.version>3.0.0</enforcer.version>
+        <enforcer.version>3.1.0</enforcer.version>
         <enforcer.includedGroupIdPatterns>^se\.jguru\..*</enforcer.includedGroupIdPatterns>
         <enforcer.excludedGroupIdPatterns>^se\.jguru\..*\.generated\..*,^se\.jguru\.codestyle\..*</enforcer.excludedGroupIdPatterns>
 
@@ -160,7 +160,7 @@
         <breakOnFailure.license>true</breakOnFailure.license>
 
         <!-- Site plugin properties -->
-        <maven-site-plugin.version>3.11.0</maven-site-plugin.version>
+        <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
         <doxia-modules.version>1.8</doxia-modules.version>
         <wagon-modules.version>2.10</wagon-modules.version>
 
@@ -320,9 +320,9 @@
                     Used: Site lifecycle, mvn site.
                 -->
                 <plugin>
-                    <groupId>com.github.jeluard</groupId>
+                    <groupId>com.github.funthomas424242</groupId>
                     <artifactId>plantuml-maven-plugin</artifactId>
-                    <version>7954</version>
+                    <version>1.5.2</version>
                     <configuration>
                         <sourceFiles>
                             <directory>${basedir}</directory>
@@ -342,16 +342,11 @@
                         </execution>
                     </executions>
                     <dependencies>
-                        <!--
-                            NOTE!
-
-                            Do not upgrade the plantuml dependency above version 8030, as those plantuml releases
-                            are not binary compatible with the plugin version 7954.
-                        -->
                         <dependency>
                             <groupId>net.sourceforge.plantuml</groupId>
                             <artifactId>plantuml</artifactId>
-                            <version>8030</version>
+                            <version>1.2020.19</version>
+                            <scope>runtime</scope>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -768,19 +763,18 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.21.0</version>
+                    <version>2.22.2</version>
                     <configuration>
                         <argLine>${surefire.argLine}</argLine>
                         <parallelOptimized>true</parallelOptimized>
-                        <workingDirectory>${basedir}/target/FAILSAFE_FORK_DIRECTORY_${surefire.forkNumber}
-                        </workingDirectory>
+                        <workingDirectory>${basedir}/target/FAILSAFE_FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     </configuration>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.surefire</groupId>
                             <artifactId>surefire-junit47</artifactId>
-                            <version>2.21.0</version>
+                            <version>2.22.2</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -1294,6 +1288,7 @@
 
             <!-- Enforce not importing incorrect projects. -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>${enforcer.version}</version>
                 <executions>
@@ -1468,7 +1463,7 @@
 
             <!-- Generate png images from Plantuml source files. -->
             <plugin>
-                <groupId>com.github.jeluard</groupId>
+                <groupId>com.github.funthomas424242</groupId>
                 <artifactId>plantuml-maven-plugin</artifactId>
                 <executions>
                     <execution>
@@ -1551,7 +1546,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.3.0</version>
             </plugin>
 
             <!--
@@ -1716,51 +1711,11 @@
     ################################################
     -->
     <profiles>
-        <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>[9,11)</jdk>
-            </activation>
-
-            <properties>
-                <surefire.fullArgLine>--add-modules java.xml.bind
-                    --illegal-access=deny</surefire.fullArgLine>
-            </properties>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <compilerArgs>
-                                <arg>--add-modules=java.xml.bind</arg>
-                            </compilerArgs>
-                            <!-- without forking compilation happens in the
-                                same process, so no arguments are applied -->
-                            <fork>true</fork>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>${surefire.fullArgLine}</argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
-                            <argLine>${surefire.fullArgLine}</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-
-        </profile>
 
         <profile>
             <id>jdk11</id>
             <activation>
-                <jdk>[11,)</jdk>
+                <jdk>[11,17)</jdk>
             </activation>
 
             <properties>
@@ -1787,6 +1742,58 @@
                                 without forking compilation happens in the
                                 same process, so no arguments are applied
                              -->
+                            <fork>true</fork>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>${surefire.fullArgLine}</argLine>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <argLine>${surefire.fullArgLine}</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
+        </profile>
+
+        <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+
+            <properties>
+                <jaxb-api.version>2.3.1</jaxb-api.version>
+                <surefire.fullArgLine />
+            </properties>
+
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.xml.bind</groupId>
+                        <artifactId>jaxb-api</artifactId>
+                        <version>${jaxb-api.version}</version>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                        <!--
+                                Without forking compilation happens in the
+                                same process, so no arguments are applied
+                              -->
                             <fork>true</fork>
                         </configuration>
                     </plugin>
